--- a/charts/fpl-case-service/values.preview.template.yaml
+++ b/charts/fpl-case-service/values.preview.template.yaml
@@ -21,6 +21,7 @@ java:
     fpl:
       secrets:
         - notify-api-key
+        - send-grid-api-key
         - docmosis-api-key
         - fpl-case-service-s2s-secret
         - fpl-case-service-idam-client-secret
