--- a/charts/fpl-case-service/Chart.yaml
+++ b/charts/fpl-case-service/Chart.yaml
@@ -6,3 +6,20 @@ description: FPL Case Service
 maintainers:
   - name: HMCTS Family Public Law team
     email: fpl-developers@HMCTS.NET
+dependencies:
+  - name: java
+    version: 3.0.0
+    repository: '@hmctspublic'
+  - name: ccd
+    version: ~4.3.3
+    repository: '@hmctspublic'
+    tags:
+      - fpl-ccd-stack
+  - name: xui-webapp
+    version: ~0.2.1
+    repository: '@hmctspublic'
+    condition: xui-webapp.enabled
+  - name: idam-pr
+    version: 2.2.6
+    repository: '@hmctspublic'
+    condition: idam-pr.enabled
