--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -3,3 +3,6 @@ ccd configuration:
 
 docmosis:
   - any: ['docker/docmosis/templates/*']
+
+onboarding:
+  - all: ['ccd-definition/FixedLists/CareSupervision/AuthorityFixedList.json']
