--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -5,4 +5,7 @@ docmosis:
   - any: ['docker/docmosis/templates/*']
 
 onboarding:
-  - all: ['ccd-definition/FixedLists/CareSupervision/AuthorityFixedList.json']
+  - all: ['ccd-definition/FixedLists/CareSupervision/AuthorityFixedList*']
+
+workflow:
+  - any: ['.github/**/*']
