--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -3,3 +3,9 @@ ccd configuration:
 
 docmosis:
   - any: ['docker/docmosis/templates/*']
+
+onboarding:
+  - all: ['ccd-definition/FixedLists/CareSupervision/AuthorityFixedList*']
+
+workflow:
+  - any: ['.github/**/*']
