--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mocha-multi": "^1.1.3",
     "mochawesome": "^6.1.1",
     "node-fetch": "^2.6.1",
-    "puppeteer": "5.4.0"
+    "puppeteer": "5.4.0",
+    "moment": "2.29.1"
   },
   "scripts": {
     "lint": "eslint e2e",
