--- a/ccd-definition/ComplexTypes/CareSupervision/CancellationReason.json
+++ b/ccd-definition/ComplexTypes/CareSupervision/CancellationReason.json
@@ -1,7 +1,7 @@
 [
   {
     "LiveFrom": "01/01/2017",
-    "ID": "AdjournmentReason",
+    "ID": "CancellationReason",
     "ListElementCode": "type",
     "FieldType": "FixedRadioList",
     "ElementLabel": "Which authorities or bodies cannot meet their hearing commitments?",
@@ -10,77 +10,77 @@
   },
   {
     "LiveFrom": "01/01/2017",
-    "ID": "AdjournmentReason",
+    "ID": "CancellationReason",
     "ListElementCode": "reason-LocalAuthority",
     "FieldType": "FixedList",
-    "ElementLabel": "Reason for adjournment",
+    "ElementLabel": "Why was the hearing postponed?",
     "FieldTypeParameter": "HearingCancellationReasons-LocalAuthority",
     "SecurityClassification": "Public",
     "FieldShowCondition": "type=\"LocalAuthority\""
   },
   {
     "LiveFrom": "01/01/2017",
-    "ID": "AdjournmentReason",
+    "ID": "CancellationReason",
     "ListElementCode": "reason-Lawyers",
     "FieldType": "FixedList",
-    "ElementLabel": "Reason for adjournment",
+    "ElementLabel": "Why was the hearing postponed?",
     "FieldTypeParameter": "HearingCancellationReasons-Lawyers",
     "SecurityClassification": "Public",
     "FieldShowCondition": "type=\"Lawyers\""
   },
   {
     "LiveFrom": "01/01/2017",
-    "ID": "AdjournmentReason",
+    "ID": "CancellationReason",
     "ListElementCode": "reason-Cafcass",
     "FieldType": "FixedList",
-    "ElementLabel": "Reason for adjournment",
+    "ElementLabel": "Why was the hearing postponed?",
     "FieldTypeParameter": "HearingCancellationReasons-Cafcass",
     "SecurityClassification": "Public",
     "FieldShowCondition": "type=\"Cafcass\""
   },
   {
     "LiveFrom": "01/01/2017",
-    "ID": "AdjournmentReason",
+    "ID": "CancellationReason",
     "ListElementCode": "reason-LegalAidAgency",
     "FieldType": "FixedList",
-    "ElementLabel": "Reason for adjournment",
+    "ElementLabel": "Why was the hearing postponed?",
     "FieldTypeParameter": "HearingCancellationReasons-LegalAidAgency",
     "SecurityClassification": "Public",
     "FieldShowCondition": "type=\"LegalAidAgency\""
   },
   {
     "LiveFrom": "01/01/2017",
-    "ID": "AdjournmentReason",
+    "ID": "CancellationReason",
     "ListElementCode": "reason-HMCTS",
     "FieldType": "FixedList",
-    "ElementLabel": "Reason for adjournment",
+    "ElementLabel": "Why was the hearing postponed?",
     "FieldTypeParameter": "HearingCancellationReasons-HMCTS",
     "SecurityClassification": "Public",
     "FieldShowCondition": "type=\"HMCTS\""
   },
   {
     "LiveFrom": "01/01/2017",
-    "ID": "AdjournmentReason",
+    "ID": "CancellationReason",
     "ListElementCode": "reason-Experts",
     "FieldType": "FixedList",
-    "ElementLabel": "Reason for adjournment",
+    "ElementLabel": "Why was the hearing postponed?",
     "FieldTypeParameter": "HearingCancellationReasons-Experts",
     "SecurityClassification": "Public",
     "FieldShowCondition": "type=\"Experts\""
   },
   {
     "LiveFrom": "01/01/2017",
-    "ID": "AdjournmentReason",
+    "ID": "CancellationReason",
     "ListElementCode": "reason-Other",
     "FieldType": "FixedList",
-    "ElementLabel": "Reason for adjournment",
+    "ElementLabel": "Why was the hearing postponed?",
     "FieldTypeParameter": "HearingCancellationReasons-Other",
     "SecurityClassification": "Public",
     "FieldShowCondition": "type=\"Other\""
   },
   {
     "LiveFrom": "01/01/2017",
-    "ID": "AdjournmentReason",
+    "ID": "CancellationReason",
     "ListElementCode": "reason",
     "FieldType": "Text",
     "ElementLabel": " ",
