--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     image: skeneventures/docmosis-tornado:2.7.3-8366
     environment:
       # not supported in current version of Tornado
-      - DOCMOSIS_KEY="3NAD-KMTK-JALP-DKIA-EBBH-2ELH-PBKQ-NS07-E7E1-B-5F56"
+      - DOCMOSIS_KEY
       - DOCMOSIS_SITE="Free Trial Tornado"
     volumes:
       - ./docker/docmosis/templates:/home/docmosis/templates:rw
