--- a/charts/fpl-case-service/values.aat.template.yaml
+++ b/charts/fpl-case-service/values.aat.template.yaml
@@ -3,9 +3,7 @@ java:
   ingressHost: ${SERVICE_FQDN}
   environment:
     IDAM_CLIENT_REDIRECT_URI: https://fpl-case-service-*.service.core-compute-aat.internal/oauth2/callback
-    SPRING_SECURITY_ENABLED: true
-    SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUERURI: https://forgerock-am.service.core-compute-idam-aat.internal:8443/openam/oauth2/hmcts
-    SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWKSETURI: https://idam-api.aat.platform.hmcts.net/o/jwks
+    SPRING_SECURITY_ENABLED: false
     GATEWAY_URL: http://gateway-ccd.aat.platform.hmcts.net
     TESTING_SUPPORT_ENABLED: true
   aadIdentityName: family-public-law
