--- a/charts/fpl-case-service/Chart.yaml
+++ b/charts/fpl-case-service/Chart.yaml
@@ -11,7 +11,7 @@ dependencies:
     version: 3.0.0
     repository: '@hmctspublic'
   - name: ccd
-    version: ~4.3.4
+    version: 4.3.4
     repository: '@hmctspublic'
     tags:
       - fpl-ccd-stack
