Force spring boot dependencies version Use legacy configuration processing replace apache commons with commons3

--- a/charts/fpl-case-service/values.yaml
+++ b/charts/fpl-case-service/values.yaml
@@ -29,6 +29,7 @@ java:
     SCHEDULER_DB_USER: fpl_scheduler@fpl-case-service-{{ .Values.global.environment }}
     SCHEDULER_DB_HOST: fpl-case-service-{{ .Values.global.environment }}.postgres.database.azure.com
     SCHEDULER_DB_PORT: 5432
+    SPRING_CLOUD_BOOTSTRAP_ENABLED: true
   keyVaults:
     fpl:
       secrets:
