--- a/service/build.gradle
+++ b/service/build.gradle
@@ -332,3 +332,9 @@ pitest {
     'REMOVE_CONDITIONALS'
   ])
 }
+
+dependencyManagement {
+  imports {
+    mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.0-M4'
+  }
+}
