chore: Point XUI to fpl LD account so that we can controll features

--- a/charts/fpl-case-service/values.preview.template.yaml
+++ b/charts/fpl-case-service/values.preview.template.yaml
@@ -61,11 +61,17 @@ xui-webapp:
       SERVICES_CCD_DATA_STORE_API: http://${SERVICE_NAME}-ccd-data-store-api
       SERVICES_TERMS_AND_CONDITIONS: http://xui-terms-and-conditions-${SERVICE_FQDN}.service.core-compute-preview.internal
       JURISDICTIONS: PUBLICLAW
-      LAUNCH_DARKLY_CLIENT_ID:
+      LAUNCH_DARKLY_CLIENT_ID: 5e21bc1a8fd1c908894bf7e7
+      APPINSIGHTS_INSTRUMENTATIONKEY: fake
+      REDISCLOUD_URL: http://dummyrediscloudurl
+      FEATURE_REDIS_ENABLED: "false"
+      FEATURE_APP_INSIGHTS_ENABLED: "false"
+      FEATURE_SECURE_COOKIE_ENABLED: "false"
     keyVaults:
-      fpl:
+      rpx:
         secrets:
-          - launch-darkly-client-id
+          - mc-s2s-client-secret
+          - mc-idam-client-secret
 
 ccd:
   ccd:
