chore: Point XUI to fpl LD account so that we can controll features

--- a/charts/fpl-case-service/values.preview.template.yaml
+++ b/charts/fpl-case-service/values.preview.template.yaml
@@ -61,11 +61,7 @@ xui-webapp:
       SERVICES_CCD_DATA_STORE_API: http://${SERVICE_NAME}-ccd-data-store-api
       SERVICES_TERMS_AND_CONDITIONS: http://xui-terms-and-conditions-${SERVICE_FQDN}.service.core-compute-preview.internal
       JURISDICTIONS: PUBLICLAW
-      LAUNCH_DARKLY_CLIENT_ID:
-    keyVaults:
-      fpl:
-        secrets:
-          - launch-darkly-client-id
+      LAUNCH_DARKLY_CLIENT_ID: 5bf2a3795b18c34b8b0e225b
 
 ccd:
   ccd:
