--- a/ccd-definition/CaseEventToFields/CareSupervision/uploadApplicationDocuments.json
+++ b/ccd-definition/CaseEventToFields/CareSupervision/uploadApplicationDocuments.json
@@ -5,10 +5,24 @@
     "CaseEventID": "uploadApplicationDocuments",
     "CaseFieldID": "documents",
     "PageFieldDisplayOrder": 1,
+    "DisplayContext": "COMPLEX",
+    "PageID": 1,
+    "PageDisplayOrder": 2,
+    "PageColumnNumber": 1,
+    "ShowSummaryChangeOption": "Y"
+  },
+  {
+    "LiveFrom": "01/01/2017",
+    "CaseTypeID": "CARE_SUPERVISION_EPO",
+    "CaseEventID": "uploadApplicationDocuments",
+    "CaseFieldID": "showMetaFields",
+    "PageFieldDisplayOrder": 1,
     "DisplayContext": "OPTIONAL",
     "PageID": 1,
     "PageDisplayOrder": 1,
-    "PageColumnNumber": 1
+    "PageColumnNumber": 1,
+    "ShowSummaryChangeOption": "Y",
+    "FieldShowCondition": "documents = \"DO NOT SHOW\""
   },
   {
     "LiveFrom": "01/01/2017",
@@ -18,7 +32,8 @@
     "PageFieldDisplayOrder": 2,
     "DisplayContext": "OPTIONAL",
     "PageID": 1,
-    "PageDisplayOrder": 1,
-    "PageColumnNumber": 1
+    "PageDisplayOrder": 2,
+    "PageColumnNumber": 1,
+    "ShowSummaryChangeOption": "Y"
   }
 ]
