--- a/ccd-definition/CaseEventToComplexTypes/children/uploadApplicationDocuments.json
+++ b/ccd-definition/CaseEventToComplexTypes/children/uploadApplicationDocuments.json
@@ -13,8 +13,17 @@
     "ID": "UploadApplicationDocuments",
     "CaseEventID": "uploadApplicationDocuments",
     "CaseFieldID": "documents",
+    "ListElementCode": "documentName",
+    "FieldDisplayOrder": 2,
+    "DisplayContext": "MANDATORY"
+  },
+  {
+    "LiveFrom": "01/01/2017",
+    "ID": "UploadApplicationDocuments",
+    "CaseEventID": "uploadApplicationDocuments",
+    "CaseFieldID": "documents",
     "ListElementCode": "document",
-    "FieldDisplayOrder": 1,
+    "FieldDisplayOrder": 3,
     "DisplayContext": "MANDATORY"
   },
   {
@@ -23,7 +32,7 @@
     "CaseEventID": "uploadApplicationDocuments",
     "CaseFieldID": "documents",
     "ListElementCode": "dateTimeUploaded",
-    "FieldDisplayOrder": 1,
+    "FieldDisplayOrder": 4,
     "DisplayContext": "OPTIONAL",
     "FieldShowCondition": "showMetaFields=\"YES\""
   },
@@ -33,7 +42,7 @@
     "CaseEventID": "uploadApplicationDocuments",
     "CaseFieldID": "documents",
     "ListElementCode": "uploadedBy",
-    "FieldDisplayOrder": 1,
+    "FieldDisplayOrder": 5,
     "DisplayContext": "OPTIONAL",
     "FieldShowCondition": "showMetaFields=\"YES\""
   }
