--- a/ccd-definition/CaseTypeTab/CareSupervision/1_ViewApplication-nonprod.json
+++ b/ccd-definition/CaseTypeTab/CareSupervision/1_ViewApplication-nonprod.json
@@ -7,7 +7,8 @@
     "TabLabel": "View application",
     "TabDisplayOrder": 1,
     "CaseFieldID": "documents",
-    "TabFieldDisplayOrder": 36
+    "TabFieldDisplayOrder": 26,
+    "FieldShowCondition": "documents !=\"\""
   },
   {
     "LiveFrom": "01/01/2017",
@@ -17,7 +18,8 @@
     "TabLabel": "View application",
     "TabDisplayOrder": 1,
     "CaseFieldID": "documentsToFollow",
-    "TabFieldDisplayOrder": 37
+    "TabFieldDisplayOrder": 27,
+    "FieldShowCondition": "documentsToFollow !=\"\""
   },
   {
     "LiveFrom": "01/01/2017",
@@ -28,6 +30,6 @@
     "TabDisplayOrder": 1,
     "CaseFieldID": "documentsLink",
     "FieldShowCondition": "documents!=\"\"",
-    "TabFieldDisplayOrder": 38
+    "TabFieldDisplayOrder": 28
   }
 ]
