--- a/charts/fpl-case-service/values.preview.template.yaml
+++ b/charts/fpl-case-service/values.preview.template.yaml
@@ -65,8 +65,9 @@ xui-webapp:
       NODE_TLS_REJECT_UNAUTHORIZED: 0
       SERVICES_IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
       SERVICES_IDAM_LOGIN_URL: https://idam-web-public.aat.platform.hmcts.net
-      REDISCLOUD_URL: redis://ignore:fake-password@${SERVICE_NAME}-redis-master:6379
-      STUB: true
+      FEATURE_REDIS_ENABLED: false
+      FEATURE_APP_INSIGHTS_ENABLED: false
+      FEATURE_SECURE_COOKIE_ENABLED: false
       DEBUG: xuiNode:*
     keyVaults:
       rpx:
