--- a/ccd-definition/CaseEventToComplexTypes/children/uploadApplicationDocuments.json
+++ b/ccd-definition/CaseEventToComplexTypes/children/uploadApplicationDocuments.json
@@ -45,7 +45,7 @@
     "ListElementCode": "dateTimeUploaded",
     "FieldDisplayOrder": 5,
     "DisplayContext": "OPTIONAL",
-    "FieldShowCondition": "showMetaFields=\"YES\""
+    "FieldShowCondition": "showCreatedByAndDateTimeUploadedFlag=\"YES\""
   },
   {
     "LiveFrom": "01/01/2017",
@@ -55,6 +55,6 @@
     "ListElementCode": "uploadedBy",
     "FieldDisplayOrder": 6,
     "DisplayContext": "OPTIONAL",
-    "FieldShowCondition": "showMetaFields=\"YES\""
+    "FieldShowCondition": "showCreatedByAndDateTimeUploadedFlag=\"YES\""
   }
 ]
