--- a/ccd-definition/CaseEventToFields/CareSupervision/uploadApplicationDocuments.json
+++ b/ccd-definition/CaseEventToFields/CareSupervision/uploadApplicationDocuments.json
@@ -15,7 +15,7 @@
     "LiveFrom": "01/01/2017",
     "CaseTypeID": "CARE_SUPERVISION_EPO",
     "CaseEventID": "uploadApplicationDocuments",
-    "CaseFieldID": "showMetaFields",
+    "CaseFieldID": "showCreatedByAndDateTimeUploadedFlag",
     "PageFieldDisplayOrder": 1,
     "DisplayContext": "OPTIONAL",
     "PageID": 1,
