--- a/charts/fpl-case-service/values.preview.template.yaml
+++ b/charts/fpl-case-service/values.preview.template.yaml
@@ -61,7 +61,7 @@ xui-webapp:
       SERVICES_CCD_DATA_STORE_API: http://${SERVICE_NAME}-ccd-data-store-api
       SERVICES_TERMS_AND_CONDITIONS: http://xui-terms-and-conditions-${SERVICE_FQDN}.service.core-compute-preview.internal
       JURISDICTIONS: PUBLICLAW
-      LAUNCH_DARKLY_CLIENT_ID: 5e21bc1a8fd1c908894bf7e7
+      LAUNCH_DARKLY_CLIENT_ID: fake
       NODE_TLS_REJECT_UNAUTHORIZED: 0
       SERVICES_IDAM_API_URL: https://idam-api.aat.platform.hmcts.net
       SERVICES_IDAM_LOGIN_URL: https://idam-web-public.aat.platform.hmcts.net
