Code review comments

--- a/ccd-definition/CaseEventToFields/CareSupervision/uploadApplicationDocuments.json
+++ b/ccd-definition/CaseEventToFields/CareSupervision/uploadApplicationDocuments.json
@@ -6,8 +6,8 @@
     "CaseFieldID": "uploadApplicationDocumentsLabel",
     "PageFieldDisplayOrder": 1,
     "DisplayContext": "READONLY",
-    "PageID": 1,
-    "PageDisplayOrder": 2,
+    "PageID": "addApplicationDocuments",
+    "PageDisplayOrder": 1,
     "PageColumnNumber": 1,
     "ShowSummaryChangeOption": "N"
   },
@@ -15,11 +15,11 @@
     "LiveFrom": "01/01/2017",
     "CaseTypeID": "CARE_SUPERVISION_EPO",
     "CaseEventID": "uploadApplicationDocuments",
-    "CaseFieldID": "documents",
+    "CaseFieldID": "applicationDocuments",
     "PageFieldDisplayOrder": 2,
     "DisplayContext": "COMPLEX",
-    "PageID": 1,
-    "PageDisplayOrder": 2,
+    "PageID": "addApplicationDocuments",
+    "PageDisplayOrder": 1,
     "PageColumnNumber": 1,
     "ShowSummaryChangeOption": "Y"
   },
@@ -27,25 +27,12 @@
     "LiveFrom": "01/01/2017",
     "CaseTypeID": "CARE_SUPERVISION_EPO",
     "CaseEventID": "uploadApplicationDocuments",
-    "CaseFieldID": "showCreatedByAndDateTimeUploadedFlag",
-    "PageFieldDisplayOrder": 1,
-    "DisplayContext": "OPTIONAL",
-    "PageID": 1,
-    "PageDisplayOrder": 1,
-    "PageColumnNumber": 1,
-    "ShowSummaryChangeOption": "Y",
-    "FieldShowCondition": "documents = \"DO NOT SHOW\""
-  },
-  {
-    "LiveFrom": "01/01/2017",
-    "CaseTypeID": "CARE_SUPERVISION_EPO",
-    "CaseEventID": "uploadApplicationDocuments",
-    "CaseFieldID": "documentsToFollow",
+    "CaseFieldID": "applicationDocumentsToFollowReason",
     "CaseEventFieldLabel": "Give details of documents to follow, including why you're not sending them now, and when you think they'll be ready.",
     "PageFieldDisplayOrder": 3,
     "DisplayContext": "OPTIONAL",
-    "PageID": 1,
-    "PageDisplayOrder": 2,
+    "PageID": "addApplicationDocuments",
+    "PageDisplayOrder": 1,
     "PageColumnNumber": 1,
     "ShowSummaryChangeOption": "Y"
   }
