--- a/ccd-definition/CaseEventToComplexTypes/uploadApplicationDocuments.json
+++ b/ccd-definition/CaseEventToComplexTypes/uploadApplicationDocuments.json
@@ -3,7 +3,7 @@
     "LiveFrom": "01/01/2017",
     "ID": "UploadApplicationDocuments",
     "CaseEventID": "uploadApplicationDocuments",
-    "CaseFieldID": "documents",
+    "CaseFieldID": "applicationDocuments",
     "ListElementCode": "documentType",
     "FieldDisplayOrder": 1,
     "DisplayContext": "MANDATORY"
@@ -12,7 +12,7 @@
     "LiveFrom": "01/01/2017",
     "ID": "UploadApplicationDocuments",
     "CaseEventID": "uploadApplicationDocuments",
-    "CaseFieldID": "documents",
+    "CaseFieldID": "applicationDocuments",
     "ListElementCode": "documentName",
     "FieldDisplayOrder": 2,
     "DisplayContext": "MANDATORY"
@@ -21,7 +21,7 @@
     "LiveFrom": "01/01/2017",
     "ID": "UploadApplicationDocuments",
     "CaseEventID": "uploadApplicationDocuments",
-    "CaseFieldID": "documents",
+    "CaseFieldID": "applicationDocuments",
     "ListElementCode": "includedInSWET",
     "EventElementLabel": "Let us know what you are including in your SWET",
     "FieldDisplayOrder": 3,
@@ -31,30 +31,10 @@
     "LiveFrom": "01/01/2017",
     "ID": "UploadApplicationDocuments",
     "CaseEventID": "uploadApplicationDocuments",
-    "CaseFieldID": "documents",
+    "CaseFieldID": "applicationDocuments",
     "ListElementCode": "document",
     "EventElementLabel": "Upload a file",
     "FieldDisplayOrder": 4,
     "DisplayContext": "MANDATORY"
-  },
-  {
-    "LiveFrom": "01/01/2017",
-    "ID": "UploadApplicationDocuments",
-    "CaseEventID": "uploadApplicationDocuments",
-    "CaseFieldID": "documents",
-    "ListElementCode": "dateTimeUploaded",
-    "FieldDisplayOrder": 5,
-    "DisplayContext": "OPTIONAL",
-    "FieldShowCondition": "showCreatedByAndDateTimeUploadedFlag=\"YES\""
-  },
-  {
-    "LiveFrom": "01/01/2017",
-    "ID": "UploadApplicationDocuments",
-    "CaseEventID": "uploadApplicationDocuments",
-    "CaseFieldID": "documents",
-    "ListElementCode": "uploadedBy",
-    "FieldDisplayOrder": 6,
-    "DisplayContext": "OPTIONAL",
-    "FieldShowCondition": "showCreatedByAndDateTimeUploadedFlag=\"YES\""
   }
 ]
