--- a/charts/fpl-case-service/Chart.yaml
+++ b/charts/fpl-case-service/Chart.yaml
@@ -23,3 +23,11 @@ dependencies:
     version: 2.2.6
     repository: '@hmctspublic'
     condition: idam-pr.enabled
+  - name: elasticsearch
+    version: 7.8.1
+    repository: '@hmctspublic'
+    condition: elastic.enabled
+  - name: logstash
+    version: 2.4.1
+    repository: '@hmctspublic'
+    condition: elastic.enabled
