fix: Add default elastic enabled false for charts

--- a/charts/fpl-case-service/values.yaml
+++ b/charts/fpl-case-service/values.yaml
@@ -7,6 +7,9 @@ idam-pr:
 xui-webapp:
   enabled: false
 
+elastic:
+  enabled: false
+
 java:
   aadIdentityName: family-public-law
   image: hmctspublic.azurecr.io/fpl/case-service:latest
