impr: idam api retries (FPLA-2389) (#2026)

--- a/service/src/main/resources/application.yaml
+++ b/service/src/main/resources/application.yaml
@@ -17,6 +17,12 @@ spring:
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
       - org.springframework.boot.autoconfigure.quartz.QuartzAutoConfiguration
 
+feign:
+  client:
+    config:
+      idam-api:
+        error-decoder: uk.gov.hmcts.reform.fpl.config.feign.codec.IdamErrorDecoder
+
 idam:
   s2s-auth:
     microservice: fpl_case_service
