--- a/service/build.gradle
+++ b/service/build.gradle
@@ -89,7 +89,7 @@ task awaitApplicationReadiness(type: Exec, description: 'Awaits until applicatio
 }
 
 task runSmokeTests(type: Exec, description: 'Runs smoke tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:smoke'
+//  commandLine '/usr/bin/yarn', '--silent', 'test:smoke'
 }
 
 task runBrowserTests(type: Exec, description: 'Runs brower tests.') {
