--- a/charts/fpl-case-service/values.preview.template.yaml
+++ b/charts/fpl-case-service/values.preview.template.yaml
@@ -140,6 +140,8 @@ ccd:
         enabled: false
   ccd-definition-store-api:
     java:
+      autoscaling:
+        enabled: false
       imagePullPolicy: Always
       environment:
         DEFINITION_STORE_DB_HOST: ${SERVICE_NAME}-postgresql
