chore: Allow skipping smoke tests per env

--- a/charts/fpl-case-service/values.preview.template.yaml
+++ b/charts/fpl-case-service/values.preview.template.yaml
@@ -186,7 +186,7 @@ logstash:
   image:
     repository: hmctspublic.azurecr.io/ccd/logstash
     tag: latest
-    pullPolicy: IfNotPresent
+    pullPolicy: Always
   logstashJavaOpts: -Xmx1g -Xms512M
   persistence:
     enabled: false
