Add additional xui replica

--- a/charts/fpl-case-service/values.preview.template.yaml
+++ b/charts/fpl-case-service/values.preview.template.yaml
@@ -48,6 +48,7 @@ idam-pr:
 xui-webapp:
   enabled: true
   nodejs:
+    replicas: 2
     imagePullPolicy: Always
     releaseNameOverride: ${SERVICE_NAME}-xui-webapp
     image: hmctspublic.azurecr.io/xui/webapp:latest
