switch local and dev so old configs work

--- a/service/src/main/resources/application-local.yaml
+++ b/service/src/main/resources/application-local.yaml
@@ -8,7 +8,15 @@ spring:
           jwk-set-uri: http://localhost:5000/o/jwks
   config:
     activate:
-      on-profile: dev
+      on-profile: local
+
+logging:
+  level:
+    uk:
+      gov:
+        hmcts:
+          reform:
+            fpl: debug
 
 idam:
   api:
