--- a/service/src/main/resources/application.yaml
+++ b/service/src/main/resources/application.yaml
@@ -18,13 +18,13 @@ spring:
       - org.springframework.boot.autoconfigure.quartz.QuartzAutoConfiguration
   config:
     import:
-      - application-dev.yaml
+      - application-local.yaml
       - optional:application-user-mappings.yaml # won't be present in prod code
       - optional:application-feature-toggle.yaml # won't be present in prod code
   profiles:
     group:
-      local:
-        - dev
+      dev:
+        - local
         - user-mappings
         - feature-toggle
 
