code review comments

--- a/service/src/main/resources/application.yaml
+++ b/service/src/main/resources/application.yaml
@@ -151,7 +151,7 @@ scheduler:
       enabled: true
       cronGroup: "NIGHTLY_CRON"
       description: 'Updates the summary tab'
-      jobClass: 'uk.gov.hmcts.reform.fpl.jobs.UpdateSummaryTab'
+      jobClass: 'uk.gov.hmcts.reform.fpl.jobs.UpdateSummaryCaseDetails'
       cron: ${UPDATE_SUMMARY_TAB_CRON:0 0 2 ? * * *} # might be a longer running job
 
 testing:
