--- a/charts/fpl-case-service/values.preview.template.yaml
+++ b/charts/fpl-case-service/values.preview.template.yaml
@@ -119,6 +119,7 @@ ccd:
       keyVaults: []
   ccd-data-store-api:
     java:
+      image: hmctspublic.azurecr.io/ccd/data-store-api:prod-c05e6016
       imagePullPolicy: Always
       memoryRequests: '1524Mi'
       cpuRequests: '900m'
