feat: update summary tab cron job (FPLA-2578) (#2128)
update summary tab cron job (FPLA-2578) 


* FPLA-2170: Update summary tab (formerly overview) resolve conflict

Co-authored-by: Samuel Vrech <samuelzero@gmail.com>
Co-authored-by: samuelzerozero <50642657+samuelzerozero@users.noreply.github.com>
Co-authored-by: karthikkannankainos <43203806+karthikkannankainos@users.noreply.github.com>

--- a/service/src/main/resources/application.yaml
+++ b/service/src/main/resources/application.yaml
@@ -147,6 +147,12 @@ scheduler:
       description: 'Finds upcoming hearings'
       jobClass: 'uk.gov.hmcts.reform.fpl.jobs.UpcomingHearingsFinder'
       cron: ${UPCOMING_HEARINGS_CRON:0 0 2 ? * MON-FRI *}
+    - name: 'Summary tab'
+      enabled: true
+      cronGroup: "NIGHTLY_CRON"
+      description: 'Updates the summary tab'
+      jobClass: 'uk.gov.hmcts.reform.fpl.jobs.UpdateSummaryCaseDetails'
+      cron: ${UPDATE_SUMMARY_TAB_CRON:0 0 3 ? * * *} # might be a longer running job
 
 testing:
   support:
