--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     image: skeneventures/docmosis-tornado:2.7.3-8366
     environment:
       # not supported in current version of Tornado
-      - DOCMOSIS_KEY
+      - DOCMOSIS_KEY="3OAD-KLTK-JALP-ELIA-EBBH-2ELH-PBKQ-GS07-E7E1-B-9F7C"
       - DOCMOSIS_SITE="Free Trial Tornado"
     volumes:
       - ./docker/docmosis/templates:/home/docmosis/templates:rw
