feat: Config for EPS and MLA case outsourcing (FPLA-2603)

--- a/charts/fpl-case-service/values.preview.template.yaml
+++ b/charts/fpl-case-service/values.preview.template.yaml
@@ -30,6 +30,8 @@ java:
         - local-authority-code-to-hmcts-court-mapping
         - local-authority-code-to-cafcass-mapping
         - local-authority-code-to-shared-inbox-mapping
+        - eps-to-local-authorities-mapping
+        - mla-to-local-authorities-mapping
         - local-authority-fallback-inbox
         - system-update-user-username
         - system-update-user-password
