--- a/service/src/main/resources/bootstrap.yaml
+++ b/service/src/main/resources/bootstrap.yaml
@@ -16,6 +16,8 @@ spring:
         local-authority-code-to-cafcass-mapping: fpl.local_authority_code_to_cafcass.mapping
         local-authority-code-to-shared-inbox-mapping: fpl.local_authority_code_to_shared_inbox.mapping
         local-authority-fallback-inbox: fpl.local_authority_fallback_inbox
+        eps-to-local-authorities-mapping: fpl.eps_to_local_authorities.mapping
+        mla-to-local-authorities-mapping: fpl.mla_to_local_authorities.mapping
         system-update-user-password: fpl.system_update.password
         system-update-user-username: fpl.system_update.username
         robotics-notification-sender: robotics.notification.sender
