--- a/service/src/functionalTest/resources/application-test-local.yaml
+++ b/service/src/functionalTest/resources/application-test-local.yaml
@@ -2,4 +2,4 @@ test-conf:
   idam-url: http://localhost:5000
   fpl-url: http://localhost:4000
   placeholders:
-    OrganisationID: 62LYJRF
+    OrganisationID: ORGSA
