--- a/charts/fpl-case-service/values.yaml
+++ b/charts/fpl-case-service/values.yaml
@@ -48,7 +48,7 @@ java:
         - local-authority-code-to-cafcass-mapping
         - local-authority-code-to-shared-inbox-mapping
         - eps-to-local-authorities-mapping
-        - mla-to-local-authorities-mapping
+        - aaa
         - local-authority-fallback-inbox
         - system-update-user-username
         - system-update-user-password
