reverted changes in dependencies

--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "mochawesome": "^6.2.1",
     "node-fetch": "^2.6.1",
     "puppeteer": "7.1.0",
-    "moment": "2.29.1"
+    "moment": "2.29.1",
+    "html_codesniffer": "^2.5.1"
   },
   "scripts": {
     "lint": "eslint e2e",
     "typings": "codeceptjs def && mv steps.d.ts typings/codeceptjs.d.ts",
     "test": "codeceptjs run-multiple parallel",
-    "test:functional": "MOCHAWESOME_REPORTFILENAME=functional codeceptjs run-multiple parallel --grep \"${TESTS_SELECTOR:=(?=.*)^(?!.*@smoke-tests)}\" --reporter mocha-multi",
+    "test:functional": "TESTS_FOR_ACCESSIBILITY='true' MOCHAWESOME_REPORTFILENAME=functional codeceptjs run-multiple parallel --grep \"${TESTS_SELECTOR:=(?=.*)^(?!.*@smoke-tests)}\" --reporter mocha-multi",
     "test:smoke": "MOCHAWESOME_REPORTFILENAME=smoke codeceptjs run --grep \"${SMOKE_TESTS_SELECTOR:=@smoke-tests}\" --reporter mocha-multi"
   },
   "husky": {
