--- a/service/src/main/resources/bootstrap.yaml
+++ b/service/src/main/resources/bootstrap.yaml
@@ -14,6 +14,7 @@ spring:
         local-authority-user-mapping: fpl.local_authority_user.mapping
         local-authority-code-to-hmcts-court-mapping: fpl.local_authority_code_to_hmcts_court.mapping
         local-authority-code-to-cafcass-mapping: fpl.local_authority_code_to_cafcass.mapping
+        local-authority-code-to-org-id-mapping: fpl.local_authority_code_to_org_id.mapping
         local-authority-code-to-shared-inbox-mapping: fpl.local_authority_code_to_shared_inbox.mapping
         local-authority-fallback-inbox: fpl.local_authority_fallback_inbox
         eps-to-local-authorities-mapping: fpl.eps_to_local_authorities.mapping
