--- a/service/src/integrationTest/resources/application-integration-test.yaml
+++ b/service/src/integrationTest/resources/application-integration-test.yaml
@@ -70,22 +70,24 @@ retry:
 fpl:
   env: 'localhost'
   local_authority_email_to_code:
-    mapping: 'example.gov.uk=>example'
+    mapping: 'test1.org.uk=>test1;test2.org.uk=>test2'
   local_authority_code_to_name:
-    mapping: 'example=>Example Local Authority'
+    mapping: 'test1=>Test 1 Local Authority;test2=>Test 2 Local Authority'
   local_authority_code_to_hmcts_court:
-    mapping: 'example=>Family Court:admin@family-court.com:11'
+    mapping: 'test1=>Family Court:admin@family-court.com:11;test2=>Family Court:admin@family-court.com:22'
   local_authority_code_to_cafcass:
-    mapping: 'example=>cafcass:cafcass@cafcass.com'
+    mapping: 'test1=>cafcass:cafcass@cafcass.com;test2=>cafcass:cafcass@cafcass.com'
   local_authority_code_to_shared_inbox:
-    mapping: 'example=>local-authority@local-authority.com'
+    mapping: 'test1=>shared@test1.org.uk;test2=>shared@test2.org.uk'
   local_authority_fallback_inbox: 'FamilyPublicLaw+PublicLawEmail@gmail.com'
   local_authority_user:
-    mapping: 'example=>1,2,3'
+    mapping: 'test1=>1,2,3'
   local_authority_code_to_org_id:
-    mapping: 'example=>ORG-LA'
+    mapping: 'test1=>ORG-LA;test2=>ORG-LA-2'
   eps_to_local_authorities:
-    mapping: 'ORG-EXT=>example'
+    mapping: 'ORG-EXT=>test1'
+  mla_to_local_authorities:
+    mapping: 'ORG-LA-2=>test1'
   system_update:
     username: 'fpl-system-update@mailnesia.com'
     password: 'Password12'
