feat: Add outsourcing mapping configuration (FPLA-2613)

--- a/service/src/main/resources/bootstrap.yaml
+++ b/service/src/main/resources/bootstrap.yaml
@@ -19,6 +19,7 @@ spring:
         local-authority-fallback-inbox: fpl.local_authority_fallback_inbox
         eps-to-local-authorities-mapping: fpl.eps_to_local_authorities.mapping
         mla-to-local-authorities-mapping: fpl.mla_to_local_authorities.mapping
+        outsourcing-mapping: fpl.outsourcing.mapping
         system-update-user-password: fpl.system_update.password
         system-update-user-username: fpl.system_update.username
         robotics-notification-sender: robotics.notification.sender
