--- a/charts/fpl-case-service/values.preview.template.yaml
+++ b/charts/fpl-case-service/values.preview.template.yaml
@@ -33,6 +33,7 @@ java:
         - local-authority-code-to-shared-inbox-mapping
         - eps-to-local-authorities-mapping
         - mla-to-local-authorities-mapping
+        - outsourcing-mapping
         - local-authority-fallback-inbox
         - system-update-user-username
         - system-update-user-password
