--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "node-fetch": "^2.6.1",
     "puppeteer": "7.1.0",
     "moment": "2.29.1",
-    "html_codesniffer": "^2.5.1"
+    "html_codesniffer": "^2.5.1",
+    "angular": "^1.6.5"
   },
   "scripts": {
     "lint": "eslint e2e",
